{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 222,
  "lineage": "76aa2a47-a2eb-058f-13c7-f679bcd323f2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c55b159cbfafe1f0",
            "arn": "arn:aws:ec2:us-east-2:186675964069:instance/i-0b73fe9b9b66614f1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b73fe9b9b66614f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-075328daa39c1a8be",
            "private_dns": "ip-10-0-3-11.us-east-2.compute.internal",
            "private_ip": "10.0.3.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-065a5d7d0db710cbc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a964568f7f0a700f",
            "tags": {
              "Name": "instance-app"
            },
            "tags_all": {
              "Name": "instance-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d26c3c9c5eef62d5"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-app",
            "aws_subnet.app-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c55b159cbfafe1f0",
            "arn": "arn:aws:ec2:us-east-2:186675964069:instance/i-069adeef3335d8efc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-069adeef3335d8efc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0213df70a90e2517b",
            "private_dns": "ip-10-0-5-7.us-east-2.compute.internal",
            "private_ip": "10.0.5.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0895718ae6d979373",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015b93baf7d986052",
            "tags": {
              "Name": "instance-data"
            },
            "tags_all": {
              "Name": "instance-data"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06bef17600ed08fc0"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-data",
            "aws_subnet.data-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c55b159cbfafe1f0",
            "arn": "arn:aws:ec2:us-east-2:186675964069:instance/i-03fb02385d09d371c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03fb02385d09d371c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f4ebdb55cb391ffb",
            "private_dns": "ip-10-0-1-4.us-east-2.compute.internal",
            "private_ip": "10.0.1.4",
            "public_dns": "ec2-13-59-219-75.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.219.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c13b293c3a3100cf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09e3e709e1c046ae9",
            "tags": {
              "Name": "instance-pub"
            },
            "tags_all": {
              "Name": "instance-pub"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a2ad82f100c4d1b8"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-pub",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:internet-gateway/igw-0e01fbb85000172c7",
            "id": "igw-0e01fbb85000172c7",
            "owner_id": "186675964069",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0760b57fca313a141"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:route-table/rtb-067efea50ae916d3a",
            "id": "rtb-067efea50ae916d3a",
            "owner_id": "186675964069",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e01fbb85000172c7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-app"
            },
            "tags_all": {
              "Name": "private-route-app"
            },
            "vpc_id": "vpc-0760b57fca313a141"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:route-table/rtb-0c9db8b320f8590c4",
            "id": "rtb-0c9db8b320f8590c4",
            "owner_id": "186675964069",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e01fbb85000172c7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route"
            },
            "tags_all": {
              "Name": "public-route"
            },
            "vpc_id": "vpc-0760b57fca313a141"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-app-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ceba7ed8f0a4a545",
            "route_table_id": "rtb-067efea50ae916d3a",
            "subnet_id": "subnet-0a964568f7f0a700f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.private-route",
            "aws_subnet.app-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-app-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095431bccebd8688a",
            "route_table_id": "rtb-067efea50ae916d3a",
            "subnet_id": "subnet-0e0ac1ab064332b24"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.private-route",
            "aws_subnet.app-subnet-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-data-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065469b0b88050ace",
            "route_table_id": "rtb-067efea50ae916d3a",
            "subnet_id": "subnet-015b93baf7d986052"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.private-route",
            "aws_subnet.data-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-data-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069d3d4a4a2653c1d",
            "route_table_id": "rtb-067efea50ae916d3a",
            "subnet_id": "subnet-0f002eb0b44cc904e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.private-route",
            "aws_subnet.data-subnet-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e56b8af64fd8aa2",
            "route_table_id": "rtb-0c9db8b320f8590c4",
            "subnet_id": "subnet-09e3e709e1c046ae9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4a73789c1e7466c",
            "route_table_id": "rtb-0c9db8b320f8590c4",
            "subnet_id": "subnet-0744f8dd2132b4768"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route",
            "aws_subnet.public-subnet-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:security-group/sg-0d26c3c9c5eef62d5",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d26c3c9c5eef62d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/28"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-app",
            "name_prefix": "",
            "owner_id": "186675964069",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-app"
            },
            "tags_all": {
              "Name": "ssh-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0760b57fca313a141"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:security-group/sg-06bef17600ed08fc0",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06bef17600ed08fc0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/28"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-data-1",
            "name_prefix": "",
            "owner_id": "186675964069",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-data"
            },
            "tags_all": {
              "Name": "ssh-data"
            },
            "timeouts": null,
            "vpc_id": "vpc-0760b57fca313a141"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:security-group/sg-0a2ad82f100c4d1b8",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2ad82f100c4d1b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-pub",
            "name_prefix": "",
            "owner_id": "186675964069",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-pub"
            },
            "tags_all": {
              "Name": "ssh-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0760b57fca313a141"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:subnet/subnet-0a964568f7f0a700f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/28",
            "id": "subnet-0a964568f7f0a700f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "186675964069",
            "tags": {
              "Name": "app-subnet-1"
            },
            "tags_all": {
              "Name": "app-subnet-1"
            },
            "vpc_id": "vpc-0760b57fca313a141"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:subnet/subnet-0e0ac1ab064332b24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/28",
            "id": "subnet-0e0ac1ab064332b24",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "186675964069",
            "tags": {
              "Name": "app-subnet-2"
            },
            "tags_all": {
              "Name": "app-subnet-2"
            },
            "vpc_id": "vpc-0760b57fca313a141"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:subnet/subnet-015b93baf7d986052",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/28",
            "id": "subnet-015b93baf7d986052",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "186675964069",
            "tags": {
              "Name": "data-subnet-1"
            },
            "tags_all": {
              "Name": "data-subnet-1"
            },
            "vpc_id": "vpc-0760b57fca313a141"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:subnet/subnet-0f002eb0b44cc904e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/28",
            "id": "subnet-0f002eb0b44cc904e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "186675964069",
            "tags": {
              "Name": "data-subnet-2"
            },
            "tags_all": {
              "Name": "data-subnet-2"
            },
            "vpc_id": "vpc-0760b57fca313a141"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:subnet/subnet-09e3e709e1c046ae9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/28",
            "id": "subnet-09e3e709e1c046ae9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "186675964069",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0760b57fca313a141"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:subnet/subnet-0744f8dd2132b4768",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/28",
            "id": "subnet-0744f8dd2132b4768",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "186675964069",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0760b57fca313a141"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:vpc/vpc-0760b57fca313a141",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-016d511af782f72c2",
            "default_route_table_id": "rtb-083b3f66715060c1d",
            "default_security_group_id": "sg-09856f121375f7fa7",
            "dhcp_options_id": "dopt-d8ec8fb3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0760b57fca313a141",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-083b3f66715060c1d",
            "owner_id": "186675964069",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}